# django-lab-inventory

./: .dockerignore  .gitignore  .gitpod.yml  BROWSER_TESTING.md  COPYING  Dockerfile  MANIFEST.in  README.md  README.rst  base_view.html  demo.html  docker-compose.yml  entrypoint.sh  example.sh  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  tests.yml
inventory/: __init__.py  admin.py  auth_backends.py  forms.py  middleware.py  models.py  urls.py  views.py
inventory/fixtures/: inventory_starter_kit.json
inventory/migrations/: 0001_initial.py  0001_squashed_0003_auto_20150626_1807.py  0002_auto_20150626_1805.py  0002_auto_20170623_1716.py  0002_auto__add_ptao__add_order.py  0003_add_vendor_email.py  0003_auto_20150626_1807.py  0003_auto__add_field_ptao_expires.py  0004_alter_category_id_alter_item_id_and_more.py  0005_rename_ptao_account_alter_account_options_and_more.py  0006_rename_ptao_order_account.py  0007_add_uniqueness_constraints.py  0007_remove_duplicates.py  0008_add_uniqueness_constraints.py  0009_alter_order_order_date.py  0010_alter_order_options_rename_created_order_created_at_and_more.py  0011_remove_item_date_added_item_created_at.py  0012_alter_order_ordered_on.py  0013_rename_ordered_by_order_placed_by_and_more.py  0014_remove_order_placed_by_order_requested_by.py  0015_auto_20250811_1413.py  0016_rename_expires_account_expires_on_and_more.py  0017_stockitem_checkoutrecord.py  0018_alter_checkoutrecord_id_alter_stockitem_id.py
inventory/static/inventory/: app.js  styles.css
inventory/templates/: base_view.html
inventory/templates/inventory/: base.html  index.html  item.html  item_entry.html  item_list.html  order.html  order_entry.html  order_list.html  order_mark_placed.html  order_table.html  orderitem_confirm_delete.html  orderitem_mark_received.html  orders.html  quick_checkout.html  quick_checkout_success.html
inventory/templates/registration/: login.html
inventory/tests/: settings.py  test_forms.py  test_models.py  test_qr_quick_checkout.py  test_utils.py  test_views.py  urls.py
