[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-lab-inventory"
dynamic = ["version"]
description = "A simple Django app for managing lab inventory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD 3-Clause License"}
authors = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
maintainers = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django>=4.2.17",
    "django-filter>=22.1",
    "django-widget-tweaks>=1.4.12",
]

[project.urls]
Homepage = "https://github.com/melizalab/django-lab-inventory"

[tool.hatch.version]
path = "inventory/__init__.py"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "inventory.tests.settings"
django_find_project = false
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=inventory --cov-report=term-missing"
testpaths = ["inventory/tests"]
env_viles = [".env", ".test.env", "deploy.env"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
lint.ignore = ["E221", "E501", "E701"]  # Matching your pep8 ignores

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.10,<3",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3,<9",
    "pytest-django>=4.9.0",
    "ruff>=0.7.0",
    "pytest-dotenv>=0.5.2",
]

[tool.hatch.build]
include = ["inventory/**"]
exclude = ["*test*"]
artifacts = ["README.md"]


