[pep8]
ignore=E221,E501,E701

[metadata]
name = django-lab-inventory
version = attr: inventory.__version__
description = A simple Django app for managing lab inventory
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
author = C Daniel Meliza
author_email = dan@meliza.org
maintainer = C Daniel Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/django-lab-inventory

[options]
zip_safe = false
include_package_data = true
packages = inventory
python_requires = >= 3.8
setup_requires =
    setuptools
install_requires =
    django-filter
test_suite = inventory.tests

[options.packages.find]
exclude = *test*
